--- a/git.d/aliases.ini
+++ b/git.d/aliases.ini
@@ -34,6 +34,7 @@
     lf = l --stat=150 --no-merges --first-parent
     ll = log --stat=150 --format=fuller
     llg = log --color --graph --pretty=format:'%C(bold white)%H %d%Creset%n%s%n%+b%C(bold blue)%an <%ae>%Creset %C(bold green)%cr (%ci)'
+    lm = l --all-match
     lo = l --no-merges --first-parent
     lp = l --first-parent
     ; check out a local copy of a PR. https://gist.github.com/gnarf/5406589
