--- a/git.d/pager.ini
+++ b/git.d/pager.ini
@@ -56,7 +56,8 @@
     file-modified-label = [M]
     file-removed-label = [-]
     file-renamed-label = [R]
-    file-style = 232 bold "#03a4ff"
+    ; file-style = 232 bold "#03a4ff"
+    file-style = "#03a4ff" bold
     hunk-header-decoration-style = "#00b494" box ul
     hunk-header-file-style = "#999999"
     hunk-header-line-number-style = bold "#03a4ff"
