--- a/conan/conan.conf
+++ b/conan/conan.conf
@@ -10,7 +10,7 @@ compression_level = 9
 sysrequires_sudo = True
 request_timeout = 60
 default_package_id_mode = full_version_mode
-revisions_enabled = true
+revisions_enabled = 1
 
 [storage]
 path = ./data
