remove old names from gitconfig

--- a/git.d/user.ini
+++ b/git.d/user.ini
@@ -5,5 +5,4 @@
     useConfigOnly = true
     ; name = Dmitry Ivanov
     ; email = d.k.ivanov@live.com
-    ; email = dmitry_ivanov3@epam.com
-    ; email = dmitry.ivanov@hermes-europe.co.uk
+    ; email = dmitry.ivanov@straumann.com
