enamble testing in cmake

--- a/data/cmake/CMakeSettings-2022.json
+++ b/data/cmake/CMakeSettings-2022.json
@@ -17,14 +17,14 @@
             "namespace": "system",
             "Name": "Windows",
             "vcpkg": "windows",
-            "CMakeArgs": "-DCMAKE_SYSTEM_VERSION=10.0"
+            "CMakeArgs": "-DCMAKE_SYSTEM_VERSION=10.0 -DENABLE_TESTING=TRUE"
         },
         {
             "environment": "system_WindowsStore",
             "namespace": "system",
             "Name": "WindowsStore",
             "vcpkg": "uwp",
-            "CMakeArgs": "-DCMAKE_SYSTEM_NAME=WindowsStore -DCMAKE_SYSTEM_VERSION=10.0"
+            "CMakeArgs": "-DCMAKE_SYSTEM_NAME=WindowsStore -DCMAKE_SYSTEM_VERSION=10.0 -DENABLE_TESTING=TRUE"
         },
         {
             "BuildCommandArgs": "/m /v:normal",
