add winmerge support

--- a/git.d/diff.ini
+++ b/git.d/diff.ini
@@ -1,6 +1,7 @@
 [diff]
     compactionHeuristic = true
-    guitool = kdiff3
+    ; guitool = kdiff3
+    guitool = winmerge
     mnemonicprefix = true
     renames = copies
 
@@ -10,8 +11,8 @@
 [difftool "idea"]
     cmd = idea diff $LOCAL $REMOTE && echo "Press any key" && read -n1
 
-; [difftool "kdiff3"]
-;     path = C:/Program Files/KDiff3/kdiff3.exe
+[difftool "kdiff3"]
+    path = kdiff3
 
 [difftool "vimdiff"]
     cmd = gvim -d "$LOCAL" "$REMOTE"
@@ -20,20 +21,33 @@
 [difftool "vscode"]
     cmd = code --wait --diff $LOCAL $REMOTE
 
+[difftool "winmerge"]
+    path = WinMergeU
+    cmd = WinMergeU \"$LOCAL\" \"$REMOTE\"
+
 [merge]
     ff = true
-    tool = kdiff3
+    ; tool = kdiff3
     ; tool = vimdiff
+    tool = winmerge
+
+[mergetool]
+    keepBackup = false
+    trustExitCode = false
 
 [mergetool "idea"]
     cmd = idea merge $LOCAL $REMOTE $BASE $MERGED && echo "Press any key" && read -n1
 
-; [mergetool "kdiff3"]
-;     path = C:/Program Files/KDiff3/kdiff3.exe
+[mergetool "kdiff3"]
+    path = kdiff3
 
 [mergetool "vimdiff"]
     cmd = gvim -d "$LOCAL" "$MERGED" "$REMOTE"
     trustExitCode = true
+
+[mergetool "winmerge"]
+    cmd = win_merge_wrap.sh \"$MERGED\" \"$REMOTE\"
+    path = WinMergeU
 
 [mergetool "vscode"]
     cmd = code --wait $MERGED
