--- a/git.d/url.ini
+++ b/git.d/url.ini
@@ -1,8 +1,11 @@
-[url "git@gitlab.com:"]
-    insteadOf = https://gitlab.com/
+; [url "git@gitlab.com:"]
+;     insteadOf = https://gitlab.com/
 
-[url "git@github.com:"]
-    insteadOf = https://github.com/
+; [url "git@github.com:"]
+;     insteadOf = https://github.com/
 
-[url "git@bitbucket.org:"]
-    insteadOf = https://bitbucket.org/
+; [url "git@bitbucket.org:"]
+;     insteadOf = https://bitbucket.org/
+
+; [url "https://github.com/rust-lang/crates.io-index"]
+;     insteadOf = https://github.com/rust-lang/crates.io-index
