--- a/git.d/diff.ini
+++ b/git.d/diff.ini
@@ -1,7 +1,8 @@
 [diff]
     compactionHeuristic = true
     ; guitool = kdiff3
-    guitool = winmerge
+    ; guitool = winmerge
+    guitool = smartsynchronize
     mnemonicprefix = true
     renames = copies
 
@@ -29,26 +30,34 @@
     ff = true
     ; tool = kdiff3
     ; tool = vimdiff
-    tool = winmerge
-    guitool = winmerge
+    ; tool = winmerge
+    ; guitool = winmerge
+    tool = smartsynchronize
+    guitool = smartsynchronize
 
 [mergetool]
     keepBackup = false
     trustExitCode = false
 
 [mergetool "idea"]
-    cmd = idea merge $LOCAL $REMOTE $BASE $MERGED && echo "Press any key" && read -n1
+    cmd = idea merge " $LOCAL" "$REMOTE" "$BASE" "$MERGED" && echo "Press any key" && read -n1
 
 [mergetool "kdiff3"]
     path = kdiff3
+    cmd = kdiff3 "$LOCAL" "$REMOTE" "$MERGED"
 
 [mergetool "vimdiff"]
     cmd = gvim -d "$LOCAL" "$MERGED" "$REMOTE"
     trustExitCode = true
 
 [mergetool "winmerge"]
-    cmd = win_merge_wrap.sh \"$MERGED\" \"$REMOTE\"
+    cmd = win_merge_wrap.sh "$MERGED" "$REMOTE"
     path = WinMergeU
 
 [mergetool "vscode"]
     cmd = code --wait $MERGED
+
+[mergetool "smartsynchronize"]
+    path = smartsynchronize
+    cmd = smartsynchronize "$LOCAL" "$REMOTE" "$MERGED"
+    trustExitCode = false
