--- a/git.d/diff.ini
+++ b/git.d/diff.ini
@@ -24,7 +24,7 @@
 
 [difftool "winmerge"]
     path = WinMergeU
-    cmd = WinMergeU \"$LOCAL\" \"$REMOTE\"
+    cmd = WinMergeU "$LOCAL" "$REMOTE"
 
 [merge]
     ff = true
