add new git aliases

--- a/git.d/aliases.ini
+++ b/git.d/aliases.ini
@@ -31,8 +31,10 @@
     l0 = log --pretty=format:'%Cred%H%Creset %C(bold blue)%an%C(reset) - %s - %Creset %C(yellow)%d%Creset %Cgreen(%cr)%Creset' --date=relative
     l = l0 --graph
     la = log --graph --all --pretty=format:'%C(yellow)%H%C(cyan)%d%Creset %s %C(white)- %an, %ar%Creset'
-    lf = l --stat=150 --no-merges --first-parent
+    lf = l --first-parent
+    lfm = l --no-merges --first-parent
     ll = log --stat=150 --format=fuller
+    llf = log --stat=150 --format=fuller --first-parent
     llg = log --color --graph --pretty=format:'%C(bold white)%H %d%Creset%n%s%n%+b%C(bold blue)%an <%ae>%Creset %C(bold green)%cr (%ci)'
     lm = l --all-match
     lo = l --no-merges --first-parent
