add light theme ps1 shortcuts

--- a/git.d/pager.ini
+++ b/git.d/pager.ini
@@ -1,16 +1,21 @@
 [core]
     pager = delta
+    ; pager = delta --light
     ; pager = less -FXRS -x2
     ; pager = cat | more.com
 
 [delta]
     features = base-theme
+    ; features = base-light
     ; features = code-review-theme
 
 [interactive]
     diffFilter = delta --color-only
 
 # https://en.wikipedia.org/wiki/ANSI_escape_code#8-bit
+[delta "base-light"]
+    side-by-side = false
+
 [delta "base-theme"]
     commit-decoration-style = bold box ul "#34fd50"
     dark = true
@@ -45,6 +50,11 @@
     ; syntax-theme = OneHalfDark
     ; syntax-theme = Vibrant Sunburst
     whitespace-error-style = 11 reverse
+
+[delta "code-review-light"]
+    dark = false
+    light = true
+    side-by-side = true
 
 [delta "code-review-theme"]
     commit-decoration-style = bold box ul "#34fd50"
