swtich to light color scheme on Windows

--- a/git.d/aliases.ini
+++ b/git.d/aliases.ini
@@ -22,7 +22,7 @@
     deleted = "!git log --diff-filter=D --summary | grep delete"
     diff = diff --ignore-space-at-eol -b -w --ignore-blank-lines
     d = diff HEAD
-    dd = !git -c core.pager='delta --features=code-review-theme' diff HEAD
+    dd = !git -c core.pager='delta --light --features=code-review-light' diff HEAD
     diffvs = difftool -t vscode
     gcaa = "!git -c gc.auto=1 -c gc.autodetach=false -c gc.autopacklimit=1 -c gc.garbageexpire=now -c gc.reflogexpireunreachable=now gc --prune=all"
     hist = for-each-ref --count=5 --sort=-committerdate --format='%(refname:short)' refs/heads/
