--- a/git.d/pager.ini
+++ b/git.d/pager.ini
@@ -1,22 +1,52 @@
 [core]
-    pager = delta
-    ; pager = delta --light
+    ; pager = delta
+    pager = delta --light
     ; pager = less -FXRS -x2
     ; pager = cat | more.com
 
 [delta]
-    features = base-theme
-    ; features = base-light
-    ; features = code-review-theme
+    ; features = base-dark
+    features = base-light
+    ; features = code-review-dark
 
 [interactive]
     diffFilter = delta --color-only
 
 # https://en.wikipedia.org/wiki/ANSI_escape_code#8-bit
 [delta "base-light"]
+    commit-decoration-style = bold box ul "#34fd50"
+    dark = false
+    decorations = true
+    file-decoration-style = none
+    file-style = omit
+    hunk-header-decoration-style = "#00b494" box ul
+    hunk-header-file-style = "#999999"
+    hunk-header-line-number-style = bold "#03a4ff"
+    hunk-header-style = file line-number syntax
+    keep-plus-minus-markers = false
+    line-numbers = true
+    line-numbers-left-format = "{nm:>1}│"
+    line-numbers-left-style = "#00b494"
+    line-numbers-minus-style = 124
+    line-numbers-plus-style = 34
+    line-numbers-right-format = "{np:>1}│"
+    line-numbers-right-style = "#00b494"
+    line-numbers-zero-style = "#999999"
+    ; ---------- Diff Colors ----------
+    ; minus-emph-style = bold 232 124
+    ; minus-empty-line-marker-style = 124 234
+    ; minus-non-emph-style = 124 234
+    ; minus-style = 124 234
+    ; plus-emph-style = bold 232 34
+    ; plus-empty-line-marker-style = 34 234
+    ; plus-non-emph-style = 34 234
+    ; plus-style = 34 234
+    ; ---------------------------------
     side-by-side = false
+    syntax-theme = OneHalfLight
+    whitespace-error-style = 11 reverse
 
-[delta "base-theme"]
+[delta "base-dark"]
     commit-decoration-style = bold box ul "#34fd50"
     dark = true
     decorations = true
@@ -52,11 +82,45 @@
     whitespace-error-style = 11 reverse
 
 [delta "code-review-light"]
+    commit-decoration-style = bold box ul "#34fd50"
     dark = false
-    light = true
+    decorations = true
+    file-added-label = [+]
+    file-copied-label = [C]
+    file-decoration-style = "#03a4ff" overline
+    file-modified-label = [M]
+    file-removed-label = [-]
+    file-renamed-label = [R]
+    ; file-style = 232 bold "#03a4ff"
+    file-style = "#03a4ff" bold
+    hunk-header-decoration-style = "#00b494" box ul
+    hunk-header-file-style = "#999999"
+    hunk-header-line-number-style = bold "#03a4ff"
+    hunk-header-style = file line-number syntax
+    keep-plus-minus-markers = fslse
+    line-numbers = true
+    line-numbers-left-format = "{nm:>1}│"
+    line-numbers-left-style = "#00b494"
+    line-numbers-minus-style = 124
+    line-numbers-plus-style = 34
+    line-numbers-right-format = "{np:>1}│"
+    line-numbers-right-style = "#00b494"
+    line-numbers-zero-style = "#999999"
+    ; ---------- Diff Colors ----------
+    ; minus-emph-style = bold 232 124
+    ; minus-empty-line-marker-style = 124 234
+    ; minus-non-emph-style = 124 234
+    ; minus-style = 124 234
+    ; plus-emph-style = bold 232 34
+    ; plus-empty-line-marker-style = 34 234
+    ; plus-non-emph-style = 34 234
+    ; plus-style = 34 234
+    ; ---------------------------------
     side-by-side = true
+    syntax-theme = OneHalfLight
+    whitespace-error-style = 11 reverse
 
-[delta "code-review-theme"]
+[delta "code-review-dark"]
     commit-decoration-style = bold box ul "#34fd50"
     dark = true
     decorations = true
