add new aliases to list remote branches

--- a/git.d/aliases.ini
+++ b/git.d/aliases.ini
@@ -39,6 +39,8 @@
     lm = l --all-match
     lo = l --no-merges --first-parent
     lp = l --first-parent
+    list-remote-branches-by-date-csv = branch -r --sort=committerdate  --format="%(refname:short);%(committerdate:short);%(authorname);%(subject)"
+    list-remote-branches-by-date-pretty = branch -r --sort=-committerdate --format="%(HEAD)%(color:yellow)%(refname:short)|%(color:bold green)%(committerdate:relative)|%(color:blue)%(subject)|%(color:magenta)%(authorname)%(color:reset)" --color=always
     ; check out a local copy of a PR. https://gist.github.com/gnarf/5406589
     pr = "!f() { git fetch -fu ${2:-origin} refs/pull/$1/head:pr/$1 && git checkout pr/$1; }; f"
     pr-clean = "!git for-each-ref refs/heads/pr/* --format='%(refname)' | while read ref ; do branch=${ref#refs/heads/} ; git branch -D $branch ; done"
