return back to dark colors

--- a/git.d/pager.ini
+++ b/git.d/pager.ini
@@ -5,8 +5,8 @@
     ; pager = cat | more.com
 
 [delta]
-    ; features = base-dark
-    features = base-light
+    features = base-dark
+    ; features = base-light
     ; features = code-review-dark
 
 [interactive]
