remove --light option from delta pager

--- a/git.d/pager.ini
+++ b/git.d/pager.ini
@@ -1,6 +1,6 @@
 [core]
-    ; pager = delta
-    pager = delta --light
+    pager = delta
+    ; pager = delta --light
     ; pager = less -FXRS -x2
     ; pager = cat | more.com
 
