switch to nord theme on linux

--- a/tmux.conf
+++ b/tmux.conf
@@ -36,9 +36,6 @@ setw -g pane-base-index 1
 set -g mouse on
 set -s escape-time 20
 
-# Set the default terminal to 256color
-set -g default-terminal "screen-256color"
-
 # History limit
 set -g history-limit 65535
 
@@ -98,7 +95,7 @@ setw -g window-status-current-style bg=colour0,fg=colour11,dim
 setw -g window-status-style bg=green,fg=black,reverse
 
 # Info on left (I don't have a session display for now)
-set -g status-left ''
+# set -g status-left ''
 
 # loud or quiet?
 set-option -g visual-activity off
@@ -107,7 +104,10 @@ set-option -g visual-silence off
 set-window-option -g monitor-activity off
 set-option -g bell-action none
 
+# Set the default terminal to 256color
 set -g default-terminal "screen-256color"
+# set -g default-terminal "xterm-256color"
+# set -ga terminal-overrides ",xterm-256color:Tc"
 
 # The modes {
 setw -g clock-mode-colour colour135
@@ -148,7 +148,7 @@ set -g message-style fg=colour232,bg=colour166,bold
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin "arcticicestudio/nord-tmux"
+# set -g @plugin "arcticicestudio/nord-tmux"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
