--- a/git.d/pager.ini
+++ b/git.d/pager.ini
@@ -5,12 +5,94 @@
     ; pager = cat | more.com
 
 [delta]
-    features = base-dark
+    features = chameleon
+    ; features = base-dark
     ; features = base-light
+    ; features = code-review-chameleon
     ; features = code-review-dark
 
 [interactive]
     diffFilter = delta --color-only
+
+[delta "chameleon"]
+    dark = true
+    line-numbers = true
+    side-by-side = false
+    keep-plus-minus-markers = false
+    syntax-theme = Nord
+    file-style = "#434C5E" bold
+    file-decoration-style = "#434C5E" ul
+    file-added-label = [+]
+    file-copied-label = [==]
+    file-modified-label = [*]
+    file-removed-label = [-]
+    file-renamed-label = [->]
+    hunk-header-style = omit
+    line-numbers-left-format = " {nm:>3} │"
+    line-numbers-left-style = red
+    line-numbers-right-format = " {np:>3} │"
+    line-numbers-right-style = green
+    line-numbers-minus-style = red italic black
+    line-numbers-plus-style = green italic black
+    line-numbers-zero-style = "#434C5E" italic
+    minus-style = bold "#FF5555"
+    minus-emph-style = bold "#202020" "#FF5555"
+    minus-non-emph-style = bold red
+    minus-empty-line-marker-style = bold red
+    plus-style = bold "#50FA7B"
+    plus-emph-style = bold "#202020" "#50FA7B"
+    plus-non-emph-style = bold green
+    plus-empty-line-marker-style = bold green
+    zero-style = syntax
+    blame-code-style = syntax
+    blame-format = "{author:<18} ({commit:>9}) {timestamp:^16}"
+    blame-palette = "#2E3440" "#3B4252" "#434C5E" "#4C566A"
+    merge-conflict-begin-symbol = ~
+    merge-conflict-end-symbol = ~
+    merge-conflict-ours-diff-header-style = "#F1FA8C" bold
+    merge-conflict-ours-diff-header-decoration-style = "#434C5E" box
+    merge-conflict-theirs-diff-header-style = "#F1FA8C" bold
+    merge-conflict-theirs-diff-header-decoration-style = "#434C5E" box
+
+[delta "code-review-chameleon"]
+    dark = true
+    line-numbers = true
+    side-by-side = true
+    keep-plus-minus-markers = false
+    syntax-theme = Nord
+    file-style = "#434C5E" bold
+    file-decoration-style = "#434C5E" ul
+    file-added-label = [+]
+    file-copied-label = [==]
+    file-modified-label = [*]
+    file-removed-label = [-]
+    file-renamed-label = [->]
+    hunk-header-style = omit
+    line-numbers-left-format = " {nm:>3} │"
+    line-numbers-left-style = red
+    line-numbers-right-format = " {np:>3} │"
+    line-numbers-right-style = green
+    line-numbers-minus-style = red italic black
+    line-numbers-plus-style = green italic black
+    line-numbers-zero-style = "#434C5E" italic
+    minus-style = bold red
+    minus-emph-style = bold "#202020" "#FF5555"
+    minus-non-emph-style = bold red
+    minus-empty-line-marker-style = bold red
+    plus-style = bold green
+    plus-emph-style = bold "#202020" "#50FA7B"
+    plus-non-emph-style = bold green
+    plus-empty-line-marker-style = bold green
+    zero-style = syntax
+    blame-code-style = syntax
+    blame-format = "{author:<18} ({commit:>9}) {timestamp:^16}"
+    blame-palette = "#2E3440" "#3B4252" "#434C5E" "#4C566A"
+    merge-conflict-begin-symbol = ~
+    merge-conflict-end-symbol = ~
+    merge-conflict-ours-diff-header-style = "#F1FA8C" bold
+    merge-conflict-ours-diff-header-decoration-style = "#434C5E" box
+    merge-conflict-theirs-diff-header-style = "#F1FA8C" bold
+    merge-conflict-theirs-diff-header-decoration-style = "#434C5E" box
 
 # https://en.wikipedia.org/wiki/ANSI_escape_code#8-bit
 [delta "base-light"]
@@ -76,7 +158,8 @@
     plus-style = 34 234
     ; ---------------------------------
     side-by-side = false
-    syntax-theme = gruvbox-dark
+    syntax-theme = Nord
+    ; syntax-theme = gruvbox-dark
     ; syntax-theme = OneHalfDark
     ; syntax-theme = Vibrant Sunburst
     whitespace-error-style = 11 reverse
@@ -156,7 +239,8 @@
     plus-style = 34 234
     ; ---------------------------------
     side-by-side = true
-    syntax-theme = gruvbox-dark
+    syntax-theme = Nord
+    ; syntax-theme = gruvbox-dark
     ; syntax-theme = OneHalfDark
     ; syntax-theme = Vibrant Sunburst
     whitespace-error-style = 11 reverse
