--- a/data/wsl.conf
+++ b/data/wsl.conf
@@ -4,7 +4,15 @@ root = /mnt
 options = "metadata,umask=22,fmask=11"
 mountFsTab = true
 
+[boot]
+systemd = true
+
+[interop]
+enabled = false
+appendWindowsPath = false
+
 [network]
 generateHosts = true
 generateResolvConf = true
+hostname = "divanov-dev-wsl"
 
