updage git configs

--- a/git.d/diff.ini
+++ b/git.d/diff.ini
@@ -2,7 +2,8 @@
     compactionHeuristic = true
     ; guitool = kdiff3
     ; guitool = winmerge
-    guitool = smartsynchronize
+    ; guitool = smartsynchronize
+    guitool = meld
     mnemonicprefix = true
     renames = copies
 
@@ -14,6 +15,10 @@
 
 [difftool "kdiff3"]
     path = kdiff3
+
+[difftool "meld"]
+    path = meld
+    cmd = meld "$LOCAL" "$REMOTE"
 
 [difftool "vimdiff"]
     cmd = gvim -d "$LOCAL" "$REMOTE"
@@ -29,11 +34,13 @@
 [merge]
     ff = true
     ; tool = kdiff3
+    tool = meld
+    ; tool = smartsynchronize
     ; tool = vimdiff
     ; tool = winmerge
+    guitool = meld
+    ; guitool = smartsynchronize
     ; guitool = winmerge
-    tool = smartsynchronize
-    guitool = smartsynchronize
 
 [mergetool]
     keepBackup = false
@@ -46,18 +53,22 @@
     path = kdiff3
     cmd = kdiff3 "$LOCAL" "$REMOTE" "$MERGED"
 
-[mergetool "vimdiff"]
-    cmd = gvim -d "$LOCAL" "$MERGED" "$REMOTE"
-    trustExitCode = true
-
-[mergetool "winmerge"]
-    cmd = win_merge_wrap.sh "$MERGED" "$REMOTE"
-    path = WinMergeU
-
-[mergetool "vscode"]
-    cmd = code --wait $MERGED
+[mergetool "meld"]
+    path = meld
+    cmd = meld "$LOCAL" "$BASE" "$REMOTE" --output "$MERGED"
 
 [mergetool "smartsynchronize"]
     path = smartsynchronize
     cmd = smartsynchronize "$LOCAL" "$REMOTE" "$MERGED"
     trustExitCode = false
+
+[mergetool "vimdiff"]
+    cmd = gvim -d "$LOCAL" "$MERGED" "$REMOTE"
+    trustExitCode = true
+
+[mergetool "vscode"]
+    cmd = code --wait $MERGED
+
+[mergetool "winmerge"]
+    cmd = win_merge_wrap.sh "$MERGED" "$REMOTE"
+    path = WinMergeU
