--- a/git.d/misc.ini
+++ b/git.d/misc.ini
@@ -2,6 +2,9 @@
     # do not warn about missing whitespace at EOF
     whitespace = nowarn
 
+[gc]
+    autoDetach = false
+
 [gist]
     private = yes
     extension = rb
@@ -10,8 +13,8 @@
     extendRegexp = true
     lineNumber = true
 
+[safe]
+    directory = *
+
 [web]
     browser = open
-
-[gc]
-    autoDetach = false
