--- a/data/Greenshot/Greenshot.ini
+++ b/data/Greenshot/Greenshot.ini
@@ -17,9 +17,9 @@ IsFirstLaunch=False
 ; Which destinations? Possible options (more might be added by plugins) are: Editor, FileDefault, FileWithDialog, Clipboard, Printer, EMail, Picker
 Destinations=Picker
 ; Specify which formats we copy on the clipboard? Options are: PNG, HTML, HTMLDATAURL and DIB
-ClipboardFormats=PNG,DIB
+ClipboardFormats=DIB,PNG
 ; Should the mouse be captured?
-CaptureMousepointer=True
+CaptureMousepointer=False
 ; Use interactive window selection to capture? (false=Capture active window)
 CaptureWindowsInteractive=False
 ; Capture delay in millseconds.
@@ -169,7 +169,7 @@ LastSaveWithVersion=1.2.10.6
 ; When reading images from files or clipboard, use the EXIF information to correct the orientation
 ProcessEXIFOrientation=True
 ; The last used region, for reuse in the capture last region
-LastCapturedRegion=1721, 172, 531, 316
+; LastCapturedRegion=0, 0, 1024, 1024
 ; The capture is cropped with these settings, e.g. when you don't want to color around it -1,-1
 Win10BorderCrop=0, 0
 ; Defines the size of the icons (e.g. for the buttons in the editor), default value 16,16 anything bigger will cause scaling
@@ -291,7 +291,7 @@ WindowMinPosition=-1, -1
 ; Position of maximized window
 WindowMaxPosition=-1, -1
 ; Position of normal window
-WindowNormalPosition=464, 111, 650, 530
+; WindowNormalPosition=0, 0, 1024, 1024
 ; Reuse already open editor
 ReuseEditor=False
 ; The smaller this number, the less smoothing is used. Decrease for detailed drawing, e.g. when using a pen. Increase for smoother lines. e.g. when you want to draw a smooth line.
@@ -302,5 +302,3 @@ SuppressSaveDialogAtClose=False
 DropShadowEffectSettings=Darkness:0.60|ShadowSize:7|ShadowOffset:-1,-1
 ; Settings for the torn edge effect.
 TornEdgeEffectSettings=Darkness:0.60|ShadowSize:7|ShadowOffset:-1,-1|GenerateShadow:True|ToothHeight:12|HorizontalToothRange:20|VerticalToothRange:20|Edges:True,True,True,True
-
-
