playing with gitconfig

--- a/git.d/core.ini
+++ b/git.d/core.ini
@@ -1,6 +1,7 @@
 [core]
     attributesfile = .gitattributes
     editor = vim
+    ; editor = code --wait
     excludesfile = .gitignore
     ignorecase = false
     longpaths = true
