--- a/data/cmake/CMakeSettings-Ninja-envs.json
+++ b/data/cmake/CMakeSettings-Ninja-envs.json
@@ -4,13 +4,17 @@
             "environment": "platform_Win32",
             "namespace": "platform",
             "Name": "Win32",
-            "inheritEnvironments": [ "msvc_x86_x64" ]
+            "inheritEnvironments": [
+                "msvc_x86"
+            ]
         },
         {
             "environment": "platform_x64",
             "namespace": "platform",
             "Name": "x64",
-            "inheritEnvironments": [ "msvc_x64_x64" ]
+            "inheritEnvironments": [
+                "msvc_x64"
+            ]
         },
         {
             "environment": "system_Windows",
@@ -27,7 +31,7 @@
             "CMakeArgs": "-DCMAKE_SYSTEM_NAME=WindowsStore -DCMAKE_SYSTEM_VERSION=10.0 -DENABLE_TESTING=TRUE"
         },
         {
-            "BuildCommandArgs": "-m:8 -v:normal -p:PreferredToolArchitecture=x64",
+            "BuildCommandArgs": "-v",
             "CMakeCommandArgs": "${system.CMakeArgs}",
             "CTestCommandArgs": "",
             "BuildDir": "${workspaceRoot}\\_build"
@@ -36,10 +40,14 @@
     "configurations": [
         {
             "name": "x64-Debug",
-            "generator": "Visual Studio 16 2019 Win64",
+            "generator": "Ninja",
             "configurationType": "Debug",
-            "inheritEnvironments": [ "platform_x64", "system_Windows" ],
+            "inheritEnvironments": [
+                "platform_x64",
+                "system_Windows"
+            ],
             "buildRoot": "${env.BuildDir}\\${name}",
+            "installRoot": "${env.BuildDir}\\${name}",
             "buildCommandArgs": "${env.BuildCommandArgs}",
             "cmakeCommandArgs": "${env.CMakeCommandArgs}",
             "ctestCommandArgs": "${env.CTestCommandArgs}",
@@ -47,11 +55,15 @@
             "variables": []
         },
         {
-            "name": "x64-RelDebug",
-            "generator": "Visual Studio 16 2019 Win64",
+            "name": "x64-RelWithDebInfo",
+            "generator": "Ninja",
             "configurationType": "RelWithDebInfo",
-            "inheritEnvironments": [ "platform_x64", "system_Windows" ],
+            "inheritEnvironments": [
+                "platform_x64",
+                "system_Windows"
+            ],
             "buildRoot": "${env.BuildDir}\\${name}",
+            "installRoot": "${env.BuildDir}\\${name}",
             "buildCommandArgs": "${env.BuildCommandArgs}",
             "cmakeCommandArgs": "${env.CMakeCommandArgs}",
             "ctestCommandArgs": "${env.CTestCommandArgs}",
@@ -60,10 +72,14 @@
         },
         {
             "name": "x64-Release",
-            "generator": "Visual Studio 16 2019 Win64",
+            "generator": "Ninja",
             "configurationType": "Release",
-            "inheritEnvironments": [ "platform_x64", "system_Windows" ],
+            "inheritEnvironments": [
+                "platform_x64",
+                "system_Windows"
+            ],
             "buildRoot": "${env.BuildDir}\\${name}",
+            "installRoot": "${env.BuildDir}\\${name}",
             "buildCommandArgs": "${env.BuildCommandArgs}",
             "cmakeCommandArgs": "${env.CMakeCommandArgs}",
             "ctestCommandArgs": "${env.CTestCommandArgs}",
@@ -72,10 +88,14 @@
         },
         {
             "name": "x86-Debug",
-            "generator": "Visual Studio 16 2019",
+            "generator": "Ninja",
             "configurationType": "Debug",
-            "inheritEnvironments": [ "platform_Win32", "system_Windows" ],
+            "inheritEnvironments": [
+                "platform_Win32",
+                "system_Windows"
+            ],
             "buildRoot": "${env.BuildDir}\\${name}",
+            "installRoot": "${env.BuildDir}\\${name}",
             "buildCommandArgs": "${env.BuildCommandArgs}",
             "cmakeCommandArgs": "${env.CMakeCommandArgs}",
             "ctestCommandArgs": "${env.CTestCommandArgs}",
@@ -83,11 +103,15 @@
             "variables": []
         },
         {
-            "name": "x86-RelDebug",
-            "generator": "Visual Studio 16 2019",
+            "name": "x86-RelWithDebInfo",
+            "generator": "Ninja",
             "configurationType": "RelWithDebInfo",
-            "inheritEnvironments": [ "platform_Win32", "system_Windows" ],
+            "inheritEnvironments": [
+                "platform_Win32",
+                "system_Windows"
+            ],
             "buildRoot": "${env.BuildDir}\\${name}",
+            "installRoot": "${env.BuildDir}\\${name}",
             "buildCommandArgs": "${env.BuildCommandArgs}",
             "cmakeCommandArgs": "${env.CMakeCommandArgs}",
             "ctestCommandArgs": "${env.CTestCommandArgs}",
@@ -96,10 +120,14 @@
         },
         {
             "name": "x86-Release",
-            "generator": "Visual Studio 16 2019",
+            "generator": "Ninja",
             "configurationType": "Release",
-            "inheritEnvironments": [ "platform_Win32", "system_Windows" ],
+            "inheritEnvironments": [
+                "platform_Win32",
+                "system_Windows"
+            ],
             "buildRoot": "${env.BuildDir}\\${name}",
+            "installRoot": "${env.BuildDir}\\${name}",
             "buildCommandArgs": "${env.BuildCommandArgs}",
             "cmakeCommandArgs": "${env.CMakeCommandArgs}",
             "ctestCommandArgs": "${env.CTestCommandArgs}",
