--- a/data/cmake/CMakeSettings-Ninja.json
+++ b/data/cmake/CMakeSettings-Ninja.json
@@ -1,60 +1,26 @@
 {
-    "environments": [
-        {
-            "environment": "platform_Win32",
-            "namespace": "platform",
-            "Name": "Win32",
-            "inheritEnvironments": [ "msvc_x86" ]
-        },
-        {
-            "environment": "platform_x64",
-            "namespace": "platform",
-            "Name": "x64",
-            "inheritEnvironments": [ "msvc_x64" ]
-        },
-        {
-            "environment": "system_Windows",
-            "namespace": "system",
-            "Name": "Windows",
-            "vcpkg": "windows",
-            "CMakeArgs": "-DCMAKE_SYSTEM_VERSION=10.0 -DENABLE_TESTING=TRUE"
-        },
-        {
-            "environment": "system_WindowsStore",
-            "namespace": "system",
-            "Name": "WindowsStore",
-            "vcpkg": "uwp",
-            "CMakeArgs": "-DCMAKE_SYSTEM_NAME=WindowsStore -DCMAKE_SYSTEM_VERSION=10.0 -DENABLE_TESTING=TRUE"
-        },
-        {
-            "BuildCommandArgs": "-v",
-            "CMakeCommandArgs": "${system.CMakeArgs}",
-            "CTestCommandArgs": "",
-            "BuildDir": "${workspaceRoot}\\_build"
-        }
-    ],
     "configurations": [
         {
             "name": "x64-Debug",
             "generator": "Ninja",
             "configurationType": "Debug",
-            "inheritEnvironments": [ "platform_x64", "system_Windows" ],
-            "buildRoot": "${env.BuildDir}\\${name}",
-            "buildCommandArgs": "${env.BuildCommandArgs}",
-            "cmakeCommandArgs": "${env.CMakeCommandArgs}",
-            "ctestCommandArgs": "${env.CTestCommandArgs}",
+            "buildRoot": "${projectDir}\\build\\${name}",
+            "installRoot": "${projectDir}\\build\\${name}",
+            "buildCommandArgs": "",
+            "cmakeCommandArgs": "-DCMAKE_SYSTEM_VERSION=10.0 -DENABLE_TESTING=TRUE",
+            "ctestCommandArgs": "--test-dir ${projectDir}\\build\\${name} -C Debug --output-on-failure",
             "intelliSenseMode": "windows-msvc-x64",
             "variables": []
         },
         {
-            "name": "x64-RelDebug",
+            "name": "x64-RelWithDebInfo",
             "generator": "Ninja",
             "configurationType": "RelWithDebInfo",
-            "inheritEnvironments": [ "platform_x64", "system_Windows" ],
-            "buildRoot": "${env.BuildDir}\\${name}",
-            "buildCommandArgs": "${env.BuildCommandArgs}",
-            "cmakeCommandArgs": "${env.CMakeCommandArgs}",
-            "ctestCommandArgs": "${env.CTestCommandArgs}",
+            "buildRoot": "${projectDir}\\build\\${name}",
+            "installRoot": "${projectDir}\\build\\${name}",
+            "buildCommandArgs": "",
+            "cmakeCommandArgs": "-DCMAKE_SYSTEM_VERSION=10.0 -DENABLE_TESTING=TRUE",
+            "ctestCommandArgs": "--test-dir ${projectDir}\\build\\${name} -C RelWithDebInfo --output-on-failure",
             "intelliSenseMode": "windows-msvc-x64",
             "variables": []
         },
@@ -62,47 +28,47 @@
             "name": "x64-Release",
             "generator": "Ninja",
             "configurationType": "Release",
-            "inheritEnvironments": [ "platform_x64", "system_Windows" ],
-            "buildRoot": "${env.BuildDir}\\${name}",
-            "buildCommandArgs": "${env.BuildCommandArgs}",
-            "cmakeCommandArgs": "${env.CMakeCommandArgs}",
-            "ctestCommandArgs": "${env.CTestCommandArgs}",
+            "buildRoot": "${projectDir}\\build\\${name}",
+            "installRoot": "${projectDir}\\build\\${name}",
+            "buildCommandArgs": "",
+            "cmakeCommandArgs": "-DCMAKE_SYSTEM_VERSION=10.0 -DENABLE_TESTING=TRUE",
+            "ctestCommandArgs": "--test-dir ${projectDir}\\build\\${name} -C Release --output-on-failure",
             "intelliSenseMode": "windows-msvc-x64",
             "variables": []
         },
         {
             "name": "x86-Debug",
-            "generator": "Ninja",
+            "generator": "Visual Studio 17 2022",
             "configurationType": "Debug",
-            "inheritEnvironments": [ "platform_Win32", "system_Windows" ],
-            "buildRoot": "${env.BuildDir}\\${name}",
-            "buildCommandArgs": "${env.BuildCommandArgs}",
-            "cmakeCommandArgs": "${env.CMakeCommandArgs}",
-            "ctestCommandArgs": "${env.CTestCommandArgs}",
+            "buildRoot": "${projectDir}\\build\\${name}",
+            "installRoot": "${projectDir}\\build\\${name}",
+            "buildCommandArgs": "",
+            "cmakeCommandArgs": "-DCMAKE_SYSTEM_VERSION=10.0 -DENABLE_TESTING=TRUE",
+            "ctestCommandArgs": "--test-dir ${projectDir}\\build\\${name} -C Debug --output-on-failure",
             "intelliSenseMode": "windows-msvc-x86",
             "variables": []
         },
         {
-            "name": "x86-RelDebug",
-            "generator": "Ninja",
+            "name": "x86-RelWithDebInfo",
+            "generator": "Visual Studio 17 2022",
             "configurationType": "RelWithDebInfo",
-            "inheritEnvironments": [ "platform_Win32", "system_Windows" ],
-            "buildRoot": "${env.BuildDir}\\${name}",
-            "buildCommandArgs": "${env.BuildCommandArgs}",
-            "cmakeCommandArgs": "${env.CMakeCommandArgs}",
-            "ctestCommandArgs": "${env.CTestCommandArgs}",
+            "buildRoot": "${projectDir}\\build\\${name}",
+            "installRoot": "${projectDir}\\build\\${name}",
+            "buildCommandArgs": "",
+            "cmakeCommandArgs": "-DCMAKE_SYSTEM_VERSION=10.0 -DENABLE_TESTING=TRUE",
+            "ctestCommandArgs": "--test-dir ${projectDir}\\build\\${name} -C RelWithDebInfo --output-on-failure",
             "intelliSenseMode": "windows-msvc-x86",
             "variables": []
         },
         {
             "name": "x86-Release",
-            "generator": "Ninja",
+            "generator": "Visual Studio 17 2022",
             "configurationType": "Release",
-            "inheritEnvironments": [ "platform_Win32", "system_Windows" ],
-            "buildRoot": "${env.BuildDir}\\${name}",
-            "buildCommandArgs": "${env.BuildCommandArgs}",
-            "cmakeCommandArgs": "${env.CMakeCommandArgs}",
-            "ctestCommandArgs": "${env.CTestCommandArgs}",
+            "buildRoot": "${projectDir}\\build\\${name}",
+            "installRoot": "${projectDir}\\build\\${name}",
+            "buildCommandArgs": "",
+            "cmakeCommandArgs": "-DCMAKE_SYSTEM_VERSION=10.0 -DENABLE_TESTING=TRUE",
+            "ctestCommandArgs": "--test-dir ${projectDir}\\build\\${name} -C Release --output-on-failure",
             "intelliSenseMode": "windows-msvc-x86",
             "variables": []
         }
