--- a/data/cmake/CMakeSettings-2022.json
+++ b/data/cmake/CMakeSettings-2022.json
@@ -2,7 +2,7 @@
     "configurations": [
         {
             "name": "x64-Debug",
-            "generator": "Ninja",
+            "generator": "Visual Studio 17 2022 Win64",
             "configurationType": "Debug",
             "inheritEnvironments": [ "msvc_x64_x64" ],
             "buildRoot": "${projectDir}\\build\\${name}",
@@ -15,7 +15,7 @@
         },
         {
             "name": "x64-RelWithDebInfo",
-            "generator": "Ninja",
+            "generator": "Visual Studio 17 2022 Win64",
             "configurationType": "RelWithDebInfo",
             "inheritEnvironments": [ "msvc_x64_x64" ],
             "buildRoot": "${projectDir}\\build\\${name}",
@@ -28,9 +28,9 @@
         },
         {
             "name": "x64-Release",
-            "generator": "Ninja",
-            "inheritEnvironments": [ "msvc_x64_x64" ],
+            "generator": "Visual Studio 17 2022 Win64",
             "configurationType": "Release",
+            "inheritEnvironments": [ "msvc_x86_x64" ],
             "buildRoot": "${projectDir}\\build\\${name}",
             "installRoot": "${projectDir}\\build\\${name}",
             "buildCommandArgs": "",
@@ -41,7 +41,7 @@
         },
         {
             "name": "x86-Debug",
-            "generator": "Ninja",
+            "generator": "Visual Studio 17 2022",
             "configurationType": "Debug",
             "inheritEnvironments": [ "msvc_x86_x64" ],
             "buildRoot": "${projectDir}\\build\\${name}",
@@ -54,7 +54,7 @@
         },
         {
             "name": "x86-RelWithDebInfo",
-            "generator": "Ninja",
+            "generator": "Visual Studio 17 2022",
             "configurationType": "RelWithDebInfo",
             "inheritEnvironments": [ "msvc_x86_x64" ],
             "buildRoot": "${projectDir}\\build\\${name}",
@@ -67,7 +67,7 @@
         },
         {
             "name": "x86-Release",
-            "generator": "Ninja",
+            "generator": "Visual Studio 17 2022",
             "configurationType": "Release",
             "inheritEnvironments": [ "msvc_x86_x64" ],
             "buildRoot": "${projectDir}\\build\\${name}",
