--- a/.editorconfig
+++ b/.editorconfig
@@ -17,7 +17,8 @@ insert_final_newline = false
 [*.ftl]
 max_line_length = 80
 
-[*.js]
+[{*.js,*.json}]
+indent_size = 2
 max_line_length = 80
 
 [*.java]
