enlage greenshot icons

--- a/data/Greenshot/greenshot-fixed.ini
+++ b/data/Greenshot/greenshot-fixed.ini
@@ -21,3 +21,5 @@ CaptureWindowsInteractive=False
 ExcludePlugins=
 ; Comma separated list of destinations which should be disabled.
 ExcludeDestinations=Box,Confluence,Dropbox,EMail,Excel,External MS Paint,FileNoDialog,Flickr,Imgur,Jira,OCR,Outlook,Photobucket,Picasa,Powerpoint,Printer,Word
+; Defines the size of the icons (e.g. for the buttons in the editor), default value 16,16 anything bigger will cause scaling
+IconSize=32, 32
