switch delta pager to dark-base

--- a/git.d/pager.ini
+++ b/git.d/pager.ini
@@ -5,8 +5,8 @@
     ; pager = cat | more.com
 
 [delta]
-    features = chameleon
-    ; features = base-dark
+    ; features = chameleon
+    features = base-dark
     ; features = base-light
     ; features = code-review-chameleon
     ; features = code-review-dark
