make cmake aliases more general

--- a/data/cmake/CMakeSettings-Ninja-envs.json
+++ b/data/cmake/CMakeSettings-Ninja-envs.json
@@ -21,14 +21,14 @@
             "namespace": "system",
             "Name": "Windows",
             "vcpkg": "windows",
-            "CMakeArgs": "-DCMAKE_SYSTEM_VERSION=10.0 -DENABLE_TESTING=TRUE"
+            "CMakeArgs": "-DCMAKE_SYSTEM_VERSION=10.0"
         },
         {
             "environment": "system_WindowsStore",
             "namespace": "system",
             "Name": "WindowsStore",
             "vcpkg": "uwp",
-            "CMakeArgs": "-DCMAKE_SYSTEM_NAME=WindowsStore -DCMAKE_SYSTEM_VERSION=10.0 -DENABLE_TESTING=TRUE"
+            "CMakeArgs": "-DCMAKE_SYSTEM_NAME=WindowsStore -DCMAKE_SYSTEM_VERSION=10.0"
         },
         {
             "BuildCommandArgs": "-v",
